--- a/bibliography.bib
+++ b/bibliography.bib
@@ -185,3 +185,28 @@
   url = {https://www.threadgroup.org},
   urldate = {2025-07-08},
 }
+
+
+@misc{miraiBotnet,
+  author = {Antonakakis, M. and April, T. and Bailey, M. et al.},
+  title = {Understanding the Mirai Botnet},
+  year = {2017},
+  note = {Accesso il 10 aprile 2025},
+  url = {https://www.usenix.org/conference/usenixsecurity17/technical-sessions/presentation/antonakakis}
+}
+
+@misc{ringIncident,
+  author = {{The Washington Post}},
+  title = {Ring cameras hacked: Families spied on},
+  year = {2019},
+  note = {Accesso il 10 aprile 2025},
+  url = {https://www.washingtonpost.com/technology/2019/12/12/hackers-are-breaking-into-ring-cameras/}
+}
+
+@misc{nestIncident,
+  author = {{TechCrunch}},
+  title = {Nest thermostat hacked},
+  year = {2019},
+  note = {Accesso il 10 aprile 2025},
+  url = {https://techcrunch.com/2019/02/18/nest-thermostat-hacked}
+}
