--- a/glossario.tex
+++ b/glossario.tex
@@ -22,4 +22,10 @@
     \item[RS-485] Standard di comunicazione seriale cablato, resistente alle interferenze e utilizzato principalmente in ambienti industriali e domotici per connessioni su lunghe distanze.
     \item[Bluetooth Low Energy (BLE)] Versione del protocollo Bluetooth a basso consumo energetico, particolarmente adatta per dispositivi IoT con alimentazione a batteria.
 
+    \item[VLAN] Virtual Local Area Network --- Una rete logica separata all'interno della stessa infrastruttura fisica, utilizzata per segmentare e proteggere la rete domestica.
+    \item[IDS] Intrusion Detection System --- Sistema di monitoraggio del traffico di rete per individuare attività sospette o non autorizzate.
+    \item[Firmware] Software installato su dispositivi hardware IoT, responsabile della gestione diretta delle funzionalità del dispositivo.
+    \item[DTLS] Datagram Transport Layer Security --- Protocollo di sicurezza che fornisce comunicazioni cifrate per dispositivi con risorse limitate, basato su UDP.
+    \item[Man-in-the-Middle (MitM)] Tipo di attacco informatico in cui un aggressore intercetta e potenzialmente manipola la comunicazione tra due dispositivi.
+
 \end{description}
