--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper]{report}
+\documentclass[12pt,a4paper]
 \setlength{\headheight}{15pt}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -69,9 +69,9 @@
 \include{capitoli/cap3}
 \include{capitoli/cap4}
 \include{capitoli/cap5}
+\include{capitoli/cap8}
 \include{capitoli/cap6}
 \include{capitoli/cap7}
-\include{capitoli/cap8}
 \appendix
 \include{glossario}
 \include{appendice}
