--- a/capitoli/cap6.tex
+++ b/capitoli/cap6.tex
@@ -1,32 +1,43 @@
-\chapter{Esempio pratico: Sistema Domotico con Apple HomeKit}
-\section{Obiettivo della configurazione}
-Lo scopo di questo capitolo è illustrare un esempio concreto di integrazione domotica attraverso la piattaforma Apple HomeKit. La configurazione prende in esame l'utilizzo combinato di interruttori intelligenti BTicino Living Now e dispositivi di sicurezza Netatmo, il tutto gestito tramite l'ecosistema Apple \parencite{appleHomekit}.
+\chapter{Prospettive Future nella Domotica Residenziale}
 
-\section{Componenti utilizzati}
-Il sistema domotico è stato realizzato impiegando i seguenti dispositivi:
+\section{Il ruolo dello standard Matter e dei protocolli basati su IP}
+Matter rappresenta una svolta fondamentale nel panorama della domotica residenziale: è uno standard aperto sviluppato dalla Connectivity Standards Alliance (CSA), precedentemente nota come Zigbee Alliance, con l’obiettivo di garantire l'interoperabilità tra dispositivi di produttori diversi. Basato su protocolli IP come IPv6 e UDP, Matter consente una comunicazione sicura, affidabile ed efficiente tra dispositivi domestici smart, eliminando molte delle barriere imposte dai sistemi proprietari e frammentati.
+
+L’architettura di Matter si fonda su un modello client-server e utilizza tecnologie di crittografia avanzate come TLS 1.3 per garantire la sicurezza end-to-end. Inoltre, supporta diversi livelli di connettività, inclusi Ethernet, Wi-Fi, Thread e BLE (Bluetooth Low Energy), permettendo una flessibilità di implementazione che si adatta a molteplici scenari d’uso. Ad esempio, Thread, un protocollo mesh basato su IPv6, consente una comunicazione a bassa potenza tra dispositivi, aumentando l’affidabilità della rete domestica.
+
+L'adozione su larga scala di Matter potrebbe uniformare il mercato, facilitare l'integrazione di dispositivi di marche diverse e semplificare le configurazioni per l'utente finale, riducendo la necessità di hub multipli e applicazioni separate. Numerosi produttori di dispositivi smart home, tra cui Apple, Google, Amazon e Samsung, hanno già annunciato il supporto a Matter, sottolineando il potenziale impatto sul settore \parencite{matterCSA, zillner2022matter}.
+
+\section{Sviluppi tecnologici emergenti}
+
+\subsection{Intelligenza artificiale e apprendimento automatico nella smart home}
+L'integrazione dell'intelligenza artificiale (IA) e dell'apprendimento automatico (machine learning) nelle smart home sta rivoluzionando il modo in cui i sistemi domotici interagiscono con gli utenti e l'ambiente circostante. Algoritmi di machine learning possono analizzare grandi quantità di dati provenienti da sensori ambientali, dispositivi indossabili e sistemi di controllo, per riconoscere pattern comportamentali e prevedere le esigenze degli utenti.
+
+Ad esempio, un sistema basato su IA può apprendere gli orari di presenza degli abitanti, regolando automaticamente l’illuminazione, la climatizzazione e la sicurezza, ottimizzando il consumo energetico. Sistemi avanzati utilizzano reti neurali profonde (deep learning) per il riconoscimento vocale e il controllo gestuale, migliorando l'interazione naturale con l’ambiente domestico. Inoltre, l’IA può rilevare anomalie, come intrusioni o guasti, e attivare allarmi o interventi correttivi in tempo reale.
+
+Un caso concreto è rappresentato da assistenti vocali intelligenti che, integrati con piattaforme domotiche, consentono di personalizzare scenari complessi, come la preparazione della casa per il rientro degli abitanti o la gestione automatica delle risorse in base alle condizioni meteo esterne \parencite{ieeeAI, chen2023smart}.
+
+\subsection{Reti mesh e Wi-Fi 6}
+Le reti mesh stanno diventando la soluzione preferita per migliorare la copertura e l’affidabilità delle comunicazioni wireless in ambito domestico. A differenza delle reti tradizionali che dipendono da un singolo punto di accesso, le reti mesh utilizzano una topologia distribuita in cui ogni nodo può comunicare con più altri nodi, creando percorsi ridondanti che aumentano la resilienza della rete.
+
+In particolare, il protocollo Thread, fortemente integrato con lo standard Matter, è un esempio di rete mesh basata su IPv6 progettata per dispositivi a bassa potenza e bassa latenza. Questo consente di collegare sensori, attuatori e altri dispositivi smart con consumi energetici contenuti e alta affidabilità.
+
+Parallelamente, la diffusione del Wi-Fi 6 (802.11ax) introduce significativi miglioramenti in termini di velocità, efficienza spettrale e capacità di gestire un elevato numero di dispositivi contemporaneamente. Wi-Fi 6 utilizza tecnologie come OFDMA (Orthogonal Frequency Division Multiple Access) e MU-MIMO (Multi-User Multiple Input Multiple Output) per ottimizzare la trasmissione dati in ambienti densi, tipici delle smart home moderne.
+
+Queste caratteristiche rendono Wi-Fi 6 particolarmente adatto a contesti smart home complessi, dove numerosi dispositivi, quali videocamere di sorveglianza, sensori ambientali, elettrodomestici intelligenti e sistemi di intrattenimento, devono comunicare simultaneamente senza degradare le prestazioni \parencite{etsiWifi6, zhang2021wifi6}.
+
+\section{Sfide legate alla privacy e alla sicurezza}
+Con l’aumento esponenziale dei dispositivi connessi nella domotica residenziale, cresce parallelamente il rischio legato alla sicurezza informatica e alla protezione della privacy degli utenti. I sistemi domotici rappresentano potenziali bersagli di attacchi hacker, che possono portare a violazioni di dati sensibili, compromissione dei dispositivi o controllo non autorizzato degli ambienti domestici.
+
+Tra le principali criticità si evidenziano:
 \begin{itemize}
-    \item \textbf{Piattaforma centrale}: Apple HomeKit con HomePod Mini come hub \parencite{appleHomepod};
-    \item \textbf{Interruttori intelligenti}: BTicino Living Now con connettività Wi-Fi \parencite{bticino};
-    \item \textbf{Dispositivi di sicurezza}: Netatmo Presence (telecamera), sensori per porte/finestre, sirena interna \parencite{netatmo}.
+    \item trasmissione non cifrata di dati sensibili, che espone le informazioni a intercettazioni e attacchi di tipo man-in-the-middle;
+    \item vulnerabilità nei firmware dei dispositivi, spesso causate da aggiornamenti ritardati o assenti, che possono essere sfruttate per eseguire codice malevolo;
+    \item accessi non autorizzati tramite reti domestiche compromesse, dovuti a configurazioni deboli o password predefinite.
 \end{itemize}
 
-\section{Fasi di configurazione}
-La configurazione del sistema si articola in tre fasi principali:
-\begin{enumerate}
-    \item \textbf{Preparazione della piattaforma HomeKit}: configurazione iniziale dell'app Casa su iOS e aggiunta dell'HomePod Mini come hub domestico;
-    \item \textbf{Integrazione degli interruttori BTicino}: installazione fisica e collegamento alla rete Wi-Fi, seguita dall'aggiunta tramite QR code nell'app Casa;
-    \item \textbf{Configurazione dei dispositivi Netatmo}: installazione e associazione via app Netatmo, quindi integrazione in HomeKit tramite HomeBridge ufficiale \parencite{homebridge}.
-\end{enumerate}
+Per affrontare tali sfide, è fondamentale adottare protocolli sicuri come TLS e DTLS per la cifratura delle comunicazioni, implementare meccanismi di autenticazione forte, e garantire aggiornamenti software regolari e automatici per correggere vulnerabilità note. Inoltre, la consapevolezza e l’educazione dell’utente sulle buone pratiche di cybersicurezza giocano un ruolo cruciale, ad esempio evitando l’uso di password deboli e configurando correttamente i dispositivi.
 
-\section{Automazioni e scenari d'uso}
-Una volta completata l'integrazione, è possibile definire automazioni personalizzate. Tra gli scenari implementabili:
-\begin{itemize}
-    \item accensione automatica delle luci al rilevamento di movimento notturno;
-    \item attivazione della sirena in caso di apertura non autorizzata di porte;
-    \item gestione dell'illuminazione tramite comandi vocali a Siri \parencite{appleSiri}.
-\end{itemize}
+Inoltre, la normativa sulla privacy, come il GDPR in Europa, impone requisiti stringenti sulla raccolta, l’uso e la conservazione dei dati personali, obbligando i produttori a implementare misure di protezione adeguate e trasparenza verso gli utenti \parencite{nistIotSecurity, gdpr2016}.
 
-\section{Vantaggi e considerazioni tecniche}
-Il sistema descritto offre un buon equilibrio tra semplicità di utilizzo, scalabilità e compatibilità. HomeKit garantisce una configurazione intuitiva e un elevato livello di sicurezza dei dati \parencite{applePrivacy}. Tuttavia, va considerata la necessità di dispositivi compatibili con lo standard Apple o l'uso di bridge aggiuntivi per dispositivi non certificati.
-
+Infine, l’adozione di tecnologie emergenti come la crittografia omomorfica e le reti neurali federate promette di migliorare ulteriormente la sicurezza e la privacy, permettendo l’elaborazione di dati sensibili senza esporli direttamente \parencite{liu2022homomorphic}.
 
