--- a/capitoli/cap8.tex
+++ b/capitoli/cap8.tex
@@ -1,40 +1,32 @@
-\chapter{Gestione di Dispositivi Multimarca}
-\section{La sfida dell'interoperabilità}
-Uno dei principali ostacoli alla diffusione della domotica è rappresentato dalla mancanza di interoperabilità tra dispositivi di marche diverse. Le barriere tecnologiche sono spesso dovute all'utilizzo di protocolli proprietari, all'assenza di standard comuni e a una frammentazione dell'ecosistema. Tuttavia, iniziative come lo standard Matter e le alleanze tra produttori stanno contribuendo a superare tali ostacoli, promuovendo la compatibilità tra dispositivi.
+\chapter{Esempio pratico: Sistema Domotico con Apple HomeKit}
+\section{Obiettivo della configurazione}
+Lo scopo di questo capitolo è illustrare un esempio concreto di integrazione domotica attraverso la piattaforma Apple HomeKit. La configurazione prende in esame l'utilizzo combinato di interruttori intelligenti BTicino Living Now e dispositivi di sicurezza Netatmo, il tutto gestito tramite l'ecosistema Apple \parencite{appleHomekit}.
 
-\section{Soluzioni generiche per la gestione multimarca}
-Per garantire la coesistenza e il funzionamento congiunto di dispositivi di produttori diversi, sono state sviluppate soluzioni generiche quali:
+\section{Componenti utilizzati}
+Il sistema domotico è stato realizzato impiegando i seguenti dispositivi:
 \begin{itemize}
-    \item \textbf{Gateway universali}: dispositivi in grado di tradurre i protocolli tra sistemi differenti;
-    \item \textbf{Piattaforme open-source}: come Home Assistant o OpenHAB, che permettono una personalizzazione spinta e ampia compatibilità;
-    \item \textbf{Standard Matter}: protocollo aperto sviluppato da CSA (Connectivity Standards Alliance) per unificare l'ecosistema IoT domestico, garantendo interoperabilità nativa.
+    \item \textbf{Piattaforma centrale}: Apple HomeKit con HomePod Mini come hub \parencite{appleHomepod};
+    \item \textbf{Interruttori intelligenti}: BTicino Living Now con connettività Wi-Fi \parencite{bticino};
+    \item \textbf{Dispositivi di sicurezza}: Netatmo Presence (telecamera), sensori per porte/finestre, sirena interna \parencite{netatmo}.
 \end{itemize}
 
-\section{Soluzioni native basate sugli smartphone}
-Numerosi produttori hanno sviluppato piattaforme integrate nei sistemi operativi mobili, che permettono il controllo centralizzato dei dispositivi domestici:
+\section{Fasi di configurazione}
+La configurazione del sistema si articola in tre fasi principali:
+\begin{enumerate}
+    \item \textbf{Preparazione della piattaforma HomeKit}: configurazione iniziale dell'app Casa su iOS e aggiunta dell'HomePod Mini come hub domestico;
+    \item \textbf{Integrazione degli interruttori BTicino}: installazione fisica e collegamento alla rete Wi-Fi, seguita dall'aggiunta tramite QR code nell'app Casa;
+    \item \textbf{Configurazione dei dispositivi Netatmo}: installazione e associazione via app Netatmo, quindi integrazione in HomeKit tramite HomeBridge ufficiale \parencite{homebridge}.
+\end{enumerate}
+
+\section{Automazioni e scenari d'uso}
+Una volta completata l'integrazione, è possibile definire automazioni personalizzate. Tra gli scenari implementabili:
 \begin{itemize}
-    \item \textbf{Apple HomeKit}: orientato alla sicurezza e alla privacy, con integrazione tramite l'app Casa e l'assistente Siri;
-    \item \textbf{Google Home}: supporta un'ampia gamma di dispositivi e l'assistente vocale Google Assistant;
-    \item \textbf{Amazon Alexa}: piattaforma versatile con ampia compatibilità e controllo vocale tramite dispositivi Echo;
-    \item \textbf{Samsung SmartThings}: combina compatibilità con dispositivi Zigbee/Z-Wave e automazioni intelligenti.
+    \item accensione automatica delle luci al rilevamento di movimento notturno;
+    \item attivazione della sirena in caso di apertura non autorizzata di porte;
+    \item gestione dell'illuminazione tramite comandi vocali a Siri \parencite{appleSiri}.
 \end{itemize}
 
-\section{Confronto tra soluzioni native}
-Le piattaforme native presentano caratteristiche differenti in termini di facilità di configurazione, sicurezza, compatibilità e funzioni avanzate. Nella Tabella~\ref{tab:confronto_piattaforme} viene proposta una comparazione sintetica.
+\section{Vantaggi e considerazioni tecniche}
+Il sistema descritto offre un buon equilibrio tra semplicità di utilizzo, scalabilità e compatibilità. HomeKit garantisce una configurazione intuitiva e un elevato livello di sicurezza dei dati \parencite{applePrivacy}. Tuttavia, va considerata la necessità di dispositivi compatibili con lo standard Apple o l'uso di bridge aggiuntivi per dispositivi non certificati.
 
-\begin{table}[h!]
-    \centering
-    \caption{Confronto tra principali soluzioni domotiche native}
-    \label{tab:confronto_piattaforme}
-    \begin{tabular}{@{}lllll@{}}
-        \toprule
-        \textbf{Piattaforma} & \textbf{Compatibilità} & \textbf{Sicurezza} & \textbf{Controllo Vocale} & \textbf{Scalabilità} \\
-        \midrule
-        Apple HomeKit & Alta & Elevata & Siri & Media \\
-        Google Home & Molto Alta & Media & Google Assistant & Alta \\
-        Amazon Alexa & Alta & Media & Alexa & Alta \\
-        Samsung SmartThings & Alta & Alta & Bixby / Alexa & Alta \\
-        \bottomrule
-    \end{tabular}
-\end{table}
 
