glossario.tex cap 8

--- a/glossario.tex
+++ b/glossario.tex
@@ -28,4 +28,11 @@
     \item[DTLS] Datagram Transport Layer Security --- Protocollo di sicurezza che fornisce comunicazioni cifrate per dispositivi con risorse limitate, basato su UDP.
     \item[Man-in-the-Middle (MitM)] Tipo di attacco informatico in cui un aggressore intercetta e potenzialmente manipola la comunicazione tra due dispositivi.
 
+
+    \item[VLAN] Virtual Local Area Network --- Rete logica separata all’interno della stessa infrastruttura fisica, utilizzata per segmentare e proteggere la rete domestica.
+    \item[IDS] Intrusion Detection System --- Sistema di monitoraggio del traffico di rete per individuare attività sospette o non autorizzate.
+    \item[Firmware] Software installato su dispositivi hardware IoT, responsabile della gestione diretta delle funzionalità del dispositivo.
+    \item[DTLS] Datagram Transport Layer Security --- Protocollo di sicurezza che fornisce comunicazioni cifrate per dispositivi con risorse limitate, basato su UDP.
+    \item[Man-in-the-Middle (MitM)] Tipo di attacco informatico in cui un aggressore intercetta e potenzialmente manipola la comunicazione tra due dispositivi.
+
 \end{description}
