--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper]
+\documentclass[12pt,a4paper]{article}
 \setlength{\headheight}{15pt}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
