--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass[12pt,a4paper]{report}
 \setlength{\headheight}{15pt}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -8,14 +8,17 @@
 \usepackage{amsmath}
 \usepackage{booktabs}
 \usepackage{lipsum}
-\usepackage{fancyhdr}
 \setlength{\headheight}{27pt}
 \usepackage[backend=biber,style=authoryear]{biblatex}
 \usepackage{csquotes}
+
+% Pacchetti necessari
+\usepackage{geometry}
+\usepackage{fancyhdr}
 \addbibresource{bibliography.bib}
 
 % Margini
-\usepackage{geometry}
+
 \geometry{a4paper, top=3cm, bottom=3cm, left=2.5cm, right=2.5cm}
 
 % Header/Footer
